# align-factor-stitch

./: .gitignore  README.md  Stitch holograms.ipynb  ccshift.py  example_I08_flatfield.ipynb  example_I14_hologram.ipynb  pyproject.toml  stitching.py
examples/: example_I08_flatfield.ipynb  example_I14_hologram.ipynb  example_lab_radiography.ipynb
src/afstitch/: __init__.py  solvers.py  utils.py
